--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </div>
     </div>
     <div class="instruction-text">
-        <p>Click and drag to rotate around the sculpture (also hold down shift to translate). <br> Use the buttons below
+        <p>Click and drag to rotate around the sculpture (hold down shift to translate). <br> Use the buttons below
             for a guided tour of Pabulum.
         </p>
     </div>
@@ -370,7 +370,9 @@
         <button id="highlightReflection">The Reflection</button>
         <button id="highlightCracking">Natural Wood Cracking</button>
     </div>
-    <script type="module" src="/main.js"></script>
+    <p>More coming soon!
+    </p>
+
 
     <h1 id="AboutTheArtist">About the Artist</h1>
     <h3><b>Vince</b></h3>
@@ -437,10 +439,10 @@
 
     <img src="sashavince.png" alt="Artist Image" class="artist-image">
     <figcaption>Vince Pane exhibiting three pieces (left to right): Bent
-        out of Face, Pabulum, and Stream of Consciousness with Sasha Moore- website creator.</figcaption>
+        out of Face, Pabulum, and Stream of Consciousness with Sasha Moore- friend and website creator. </figcaption>
 
 
-
+    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
