added files manually to dist/assets for production

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <div class="title-image-container">
         <img src="topPic.jpg" alt="title" class="full-width-image">
         <div class="title-content">
-            <h1><b>Vincent Pane</b></h1>
+            <h1 style="font-size: 3em;"><b>Vincent Pane</b></h1>
             <p><i>Wood Sculptor</i></p>
         </div>
         <div class="menu-icon-container">
@@ -341,7 +341,7 @@
         <!-- Dynamic Menu Placeholder -->
         <div id="dynamicMenu" class="dynamic-menu" style="display: none;">
             <ul>
-                <li><a href="#exploreTheSculpture">Explore the Sculpture in 3D</a></li>
+                <li><a href="#exploreTheSculpture">Explore sculptures in 3D</a></li>
                 <li><a href="#AboutTheArtist">About the Artist</a></li>
                 <li><a href="#ContactMe">Get in Touch</a></li>
                 <!-- Add more list items/links as needed -->
@@ -362,7 +362,7 @@
         </p>
     </div>
     <div class="buttons-container">
-        <button id="logCamera">Log Camera Orientation</button>
+        <!-- <button id="logCamera">Log Camera Orientation</button> -->
         <button id="highlightIntro">Introduction</button>
         <button id="highlightHands">The Hands</button>
         <button id="highlightRiver">The River</button>
@@ -370,8 +370,7 @@
         <button id="highlightReflection">The Reflection</button>
         <button id="highlightCracking">Natural Wood Cracking</button>
     </div>
-    <p>More coming soon!
-    </p>
+    <p> More coming soon! </p>
 
 
     <h1 id="AboutTheArtist">About the Artist</h1>
@@ -439,7 +438,8 @@
 
     <img src="sashavince.png" alt="Artist Image" class="artist-image">
     <figcaption>Vince Pane exhibiting three pieces (left to right): Bent
-        out of Face, Pabulum, and Stream of Consciousness with Sasha Moore- friend and website creator. </figcaption>
+        out of Face, Pabulum, and Stream of Consciousness with Sasha Moore- friend and website creator
+        (amoore5@stanford.edu) </figcaption>
 
 
     <script type="module" src="/main.js"></script>
