--- a/index.html
+++ b/index.html
@@ -326,6 +326,16 @@
             /* for e.g: value = 40px*/
         }
     </style>
+    <script type="importmap">
+            {
+              "imports": {
+                "three": "https://unpkg.com/three@<version>/build/three.module.js",
+                "three/examples/jsm/controls/OrbitControls": "https://unpkg.com/three@0.162.0/examples/jsm/controls/OrbitControls.js",
+                "three/examples/jsm/loaders/OBJLoader": "https://unpkg.com/three@0.162.0/examples/jsm/loaders/OBJLoader.js",
+                "three/examples/jsm/loaders/MTLLoader": "https://unpkg.com/three@0.162.0/examples/jsm/loaders/MTLLoader.js"
+              }
+            }
+          </script>
 </head>
 
 <body>
@@ -440,6 +450,8 @@
     <figcaption>Vince Pane exhibiting three pieces (left to right): Bent
         out of Face, Pabulum, and Stream of Consciousness with Sasha Moore- friend and website creator
         (amoore5@stanford.edu) </figcaption>
+
+
 
 
     <script type="module" src="/main.js"></script>
