CDN mapping fixed

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <script type="importmap">
             {
               "imports": {
-                "three": "https://unpkg.com/three@<version>/build/three.module.js",
+                "three": "https://unpkg.com/three@0.162.0/build/three.module.js",
                 "three/examples/jsm/controls/OrbitControls": "https://unpkg.com/three@0.162.0/examples/jsm/controls/OrbitControls.js",
                 "three/examples/jsm/loaders/OBJLoader": "https://unpkg.com/three@0.162.0/examples/jsm/loaders/OBJLoader.js",
                 "three/examples/jsm/loaders/MTLLoader": "https://unpkg.com/three@0.162.0/examples/jsm/loaders/MTLLoader.js"
