--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
 
         .canvas-container {
             /* border: 5px solid white; */
-            /* For better visibility */
+
             margin-right: 20px;
             /* Spacing between the canvas and the image */
+
+            position: relative;
+            /* So things inside it can be positioned abosolutely, relative to container*/
         }
 
         .image-container {
@@ -361,7 +364,20 @@
 
     <h2 id="exploreTheSculpture"> Pabulum </h2>
     <div class="display-flex">
-        <div class="canvas-container" id="canvas-container"></div>
+        <div class="canvas-container" id="canvas-container">
+            <div id="loadingBarContainer"
+                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); display: flex; align-items: center; justify-content: center;">
+                <div style="position: relative; width: 50%; height: 30px;">
+                    <!-- Container for the loading bar and text -->
+                    <div id="loadingText"
+                        style="position: absolute; width: 100%; text-align: center; color: white; z-index: 10;">Loading
+                        3D Model...</div>
+                    <div id="loadingBar"
+                        style="position: absolute; width: 0%; height: 100%; background: rgb(3, 79, 17);"></div>
+                </div>
+            </div>
+
+        </div>
         <div class="image-container" id="imageAnnotationContainer">
             <img id="highlightedImage" src="" alt="Highlighted Part" class="image-container">
         </div>
